kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-validator
  labels:
    app: catalog-validator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: catalog-validator
